<resources>
    <string name="app_name">tema3</string>
    <string name="preferencias">Preferencias</string>
    <string name="nombre">Nombre:</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="hombre">Hombre</string>
    <string name="nombre_de_usuario">Nombre de Usuario:</string>
    <string name="mujer">Mujer</string>
    <string name="sexo">Sexo:</string>
    <string name="guardar_preferencias">Guardar Preferencias</string>
    <string name="mostrar_preferencias">Mostrar Preferencias</string>
    <string name="registraralumno">RegistrarAlumno</string>
    <string name="curso_del_alumno">Curso Del Alumno</string>
    <string name="nombre_del_alumno">Nombre del Alumno</string>
    <string name="edad_del_alumno">Edad del Alumno</string>
    <string name="ciclo">Ciclo</string>
    <string name="registrar_alumno">Registrar Alumno</string>
    <string name="cancelar">Cancelar</string>
    <string name="nota_media">Nota Media</string>
    <string name="registrar_profesor">Registrar Profesor</string>
    <string name="consultar">Consultar</string>
    <string name="nombre_del_profesor">Nombre del Profesor</string>
    <string name="edad">Edad</string>
    <string name="curso_donde_es_tutor">Curso donde es Tutor</string>
    <string name="despacho">Despacho</string>
    <string name="todos_los_estudiantes">Todos los Estudiantes</string>
    <string name="button">Button</string>
    <string name="estudiantes_por_ciclo">Estudiantes Por Ciclo</string>
    <string name="ciclo_que_quiere_buscar">Ciclo que quiere Buscar</string>
    <string name="buscar">Buscar</string>
    <string name="alumnos_por_ciclos">Alumnos Por Ciclos</string>
    <string name="estudiantes">Estudiantes</string>
    <string name="alumnos_por_curso">Alumnos Por Curso</string>
    <string name="estudiantes_por_curso">Estudiantes Por Curso</string>
    <string name="resultado">Resultado:</string>
    <string name="introduzca_el_curso">Introduzca el Curso</string>
    <string name="todos_los_profesores">Todos Los Profesores</string>
    <string name="textview">TextView</string>
</resources>
